package edu.fiuba.algo3.model.Exceptions;

public class TamanioDelEscenarioInvalido extends RuntimeException {}
